--- a/config.ini
+++ b/config.ini
@@ -5,19 +5,24 @@ log_path = ../logs/gradient_tape
 plot_path = ../plots
 # path to checkpoint directory for saving/loading models
 checkpoint_path = ../checkpoint
-# path used to read raw or processed data (see refresh_data)
-data_path = ../feature_strore/source_discriminator/1634831542
-refresh_data = False
+
 # To clean and process raw data, set refresh data to True, 
-# set data_path to the location of the csv file and 
-# uncomment the following line 
-# store_path = ../feature_strore
+# and set the data_path to the location of controller file.
+
+# path used to read raw or processed data (see refresh_data)
+data_path = ../feature_strore/source_discriminator/1635017221
+refresh_data = False
+# path to the controller file, for raw data
+# data_path = ../data/file_locator.csv
+# refresh_data = True
+
+store_path = ../feature_strore
 
 # what to call the feature set of processed data
 set_name = source_discriminator
 
 # trainig hypreparameters
-epochs = 5
+epochs = 1
 batch_size = 32
 learning_rate = 0.001
 loss_lambda = 1.2
@@ -27,7 +32,7 @@ checkpoint_path = ../checkpoint
 # the data path is where to get the data. 
 # for processed data, this points to feature store and refresh_data is False.
 # for raw data, this points to a csv file whose first column is path to sensor files, and refresh_data is True
-data_path = ../predictions/file_locations.csv
+data_path = ../predictions/file_locator.csv
 refresh_data = True
 # path to save predictions
 pred_path = ../predictions
