typo in config file

--- a/config.ini
+++ b/config.ini
@@ -10,13 +10,13 @@ checkpoint_path = ../checkpoint
 # and set the data_path to the location of controller file.
 
 # path used to read raw or processed data (see refresh_data)
-data_path = ../feature_strore/source_discriminator/1635017221
+data_path = ../feature_store/source_discriminator/1635137786
 refresh_data = False
 # path to the controller file, for raw data
 # data_path = ../data/file_locator.csv
 # refresh_data = True
 
-store_path = ../feature_strore
+store_path = ../feature_store
 
 # what to call the feature set of processed data
 set_name = source_discriminator
