save info, stop epoch

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,8 @@ log_path = ../logs/gradient_tape
 plot_path = ../plots
 # path to checkpoint directory for saving/loading models
 checkpoint_path = ../checkpoint
-
+# path to save training history
+history_path= ../history
 # To clean and process raw data, set refresh data to True, 
 # and set the data_path to the location of controller file.
 
